simple search endpoints implemented

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <ul>
     <li><a href="/overheardForm">Overheard at Brandeis demo</a></li>
     <li><a href="/coursefinder">Course finder demo</a></li>
+    <li><a href="/moviefinder">Movie finder demo</a></li>
     <li><a href="/demo4stage">4 stage aggregation demo</a></li>
     <li><a href="/pivot/onInstructor">Pivot table on instructor</a></li>
     <li><a href="/deptTeachingLoads/COSI">Teaching loads for COSI</a></li>
