--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Search for Movies!</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="/stylesheets/home.css">
+</head>
 
-<h1>
-  About -- Developers
-</h1>
-<ul>
-  <li>Tim Hickey</li>
-  <li>Jiaxin Li</li>
-</ul>
+<body class="d-flex text-center text-black bg-light">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="mb-auto">
+    <div>
+      <h2 class="float-md-left mb-0">Search for Movies!</h2>
+      <nav class="nav nav-masthead justify-content-center float-md-right">
+        <a class="nav-link" href="/">Home</a>
+      </nav>
+    </div>
+  </header>
 
+  <main class="mt-5">
+    <h2>About</h2>
+    <p class="lead">
+      I completed this for is a course project for COSI103A!
+      <br>Author: Qing Liu</p>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+
+</body>
+</html>
