--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,63 @@
-<h1>L38</h1>
-<ul>
-    <li><a href="/overheardForm">Overheard at Brandeis demo</a></li>
-    <li><a href="/coursefinder">Course finder demo</a></li>
-    <li><a href="/moviefinder">Movie finder demo</a></li>
-    <li><a href="/demo4stage">4 stage aggregation demo</a></li>
-    <li><a href="/pivot/onInstructor">Pivot table on instructor</a></li>
-    <li><a href="/deptTeachingLoads/COSI">Teaching loads for COSI</a></li>
-    <li><a href="/smallclasses">Small Classes</a></li>
-    <li><a href="/bigclasses/150">Big classes (> 150)</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search Movies!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/home.css">
+</head>
+
+<body class="d-flex text-center text-black bg-light">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+            <h2 class="float-md-left mb-0">Search for Movies!</h2>
+            <nav class="nav nav-masthead justify-content-center float-md-right">
+                <a class="nav-link" href="/about">About This Service</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="m-5 p-5">
+        <form method="post" action="/movies/byTitle">
+            Show Movies by Title:
+            <input type="text" name="title"
+                   placeholder="e.g. The Avengers">
+            <input type="submit">
+        </form>
+        <br>
+        <form method="post" action="/movies/byYear">
+            Show Movies by Year:
+            <input type="number" name="year"
+                   placeholder="e.g. 2015">
+            <input type="submit">
+        </form>
+        <br>
+        <form method="post" action="/movies/byActor">
+            Show Movies by Actor:
+            <input type="text" name="actor"
+                   placeholder="e.g. Colin Farrell">
+            <input type="submit">
+        </form>
+        <br>
+        <form method="post" action="/movies/byGenre">
+            Show Movies by Genre:
+            <input type="text" name="genre"
+                   placeholder="e.g. Horror">
+            <input type="submit">
+        </form>
+        <br>
+
+        <div class="d-flex align-items-center justify-content-center mt-5" style="height: 350px">
+            <img  src="https://cdn.pixabay.com/photo/2019/04/24/21/55/cinema-4153289__340.jpg"/>
+        </div>
+    </main>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+
+</body>
+</html>
