--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>CS103a Express App</title>
+    <title>Search for Movies!</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -15,47 +16,6 @@
   <body>
    <div class="container-fluid">
 
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">CS103a Express App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-      
-            <li class="nav-item ">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            </li>
-      
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-
-            
-            <% if (!loggedIn) {%>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Login/Signup</a>
-            </li>
-            <% } else { %>
-
-              <li class="nav-item">
-                <a class="nav-link" href="/todo">To Do list</a>
-              </li>
-            
-              
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout <%= username %></a>
-              </li>
-            <% } %>
-      
-          </ul>
-      
-      
-        </div>
-      </nav>
-      
 
 	<%- body %>
 
