--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,12 +20,12 @@
     </div>
   </header>
 
-  <main class="mt-5">
+  <div class="mt-5">
     <h2>About</h2>
     <p class="lead">
       I completed this for is a course project for COSI103A!
       <br>Author: Qing Liu</p>
-  </main>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
