--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         </div>
     </header>
 
-    <main class="m-5 p-5">
+    <div class="m-5 p-5">
         <form method="post" action="/movies/byTitle">
             Show Movies by Title:
             <input type="text" name="title"
@@ -53,7 +53,7 @@
         <div class="d-flex align-items-center justify-content-center mt-5" style="height: 350px">
             <img  src="https://cdn.pixabay.com/photo/2019/04/24/21/55/cinema-4153289__340.jpg"/>
         </div>
-    </main>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
