--- a/views/movielist.ejs
+++ b/views/movielist.ejs
@@ -1,6 +1,26 @@
-<h1>The courses are</h1>
-Here we want a ul list with the instructor, coursenum, title, term
-<hr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search Movies!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/home.css">
+</head>
+
+<body class="d-flex text-center text-black bg-light">
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+            <h2 class="float-md-left mb-0">Search for Movies!</h2>
+            <nav class="nav nav-masthead justify-content-center float-md-right">
+                <a class="nav-link" href="/">Home</a>
+            </nav>
+        </div>
+    </header>
+
+
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
@@ -36,3 +56,5 @@ Here we want a ul list with the instructor, coursenum, title, term
         <%= JSON.stringify(movies,null,5) %>
     -->
 </pre>
+</body>
+</html>
